@@ -1,3 +1,5 @@
+- first steps toward new installer style
+
 Version 10.48 - 28 July 2008
 
 - 2009.0 beta 1 logo
